@@ -22,6 +22,8 @@ set -e
 num_tiles=33
 tile_size=32
 
+if [ ! -d png ] ; then mkdir png ; fi
+
 gimp -i -d -f -b - << EOF 2>/dev/null | grep '^ERROR' || :
 (set! image (car (gimp-file-load 1 "`dirname "$0"`/mirror.xcf" "`dirname "$0"`/mirror.xcf")))
 (set! layers (cadr (gimp-image-get-layers image)))
